--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
         run: ls -l
 
   deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted  # Your laptop
     needs: build
 
     steps:
@@ -26,5 +26,5 @@ jobs:
       - name: Deploy HTML/JS
         run: |
           echo "Deploying files to local server folder..."
-          copy index.html C:\Users\device1\Desktop\DeploymentFolder
-          copy script.js C:\Users\device1\Desktop\DeploymentFolder
+          copy index.html C:\DeploymentFolder\
+          copy script.js C:\DeploymentFolder\
