--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: ls -l
 
   deploy:
-    runs-on: self-hosted 
+    runs-on: self-hosted #Laptop
     needs: build
 
     steps:
