--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'   # or the version you need
+          node-version: '18'   
 
       # 3️⃣ Install dependencies
       - name: Install dependencies
