--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,23 @@
-name: Test and Merge Feature Branch
+name: CI/CD Pipeline
 
-# Trigger workflow when you push to any feature branch
 on:
   push:
-    branches:
-      - 'feature/*'
+    branches: [master]
 
 jobs:
-  test-and-merge:
+  test-and-deploy:
     runs-on: self-hosted
 
     steps:
-      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v3
-
-      # 2️⃣ Set up Node.js (required for npm and Jest)
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'   
-
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
+        
+      - name: Install Dependencies
         run: npm install
-
-      # 4️⃣ Run tests
-      - name: Run tests
+        
+      - name: Run Tests
         run: npm test
-
-      # 5️⃣ Merge to main if tests pass
-      - name: Merge feature branch into master
-        if: success()   # Only run if previous steps succeeded
-        run: |
-          git config --global user.name "suryasuri6224"
-          git config --global user.email "suryaprakashaluri@gmail.com"
-          git checkout master
-          git pull origin master
-          git merge $GITHUB_REF --no-ff -m "Automated merge from $GITHUB_REF"
-          git push origin master
+        
+      - name: Deploy
+        if: success()
+        run: xcopy . "C:\Users\device1\Desktop\DeploymentFolder" /E /H /Y
